[ADDED] Favicon to the webpage along with some minor changes

--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,10 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Grayscale - Start Bootstrap Theme</title>
+    <title>Currency Predictor</title>
+
+    <!-- Favicon for the page !-->
+    <link rel="shortcut icon" type="image/png" href="{% static 'images/favicon.jpg' %}"/>
 
     <!-- Bootstrap core CSS -->
 {#    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" type="text/css">#}
